# autoMeasureWidth

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.MD  vcpkg.json
algorithm/: CMakeLists.txt  cal_line_width.cpp  cal_line_width.h  opencv_test.cpp  opencv_test.h
basler/: Basler.cpp  Basler.h  CMakeLists.txt  basler_obj.cpp  basler_obj.h  cam_worker.cpp  cam_worker.h
logger/: CMakeLists.txt  LogConfigMgr.cpp  LogConfigMgr.h  log.cpp  log.h
widget/: CMakeLists.txt  custom_view.cpp  custom_view.h  main.cpp  measure_widget.cpp  measure_widget.h
